Initial release commit.

--- a/RotatoChip/RotatoChip.csproj
+++ b/RotatoChip/RotatoChip.csproj
@@ -6,6 +6,14 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Utility.RotatoChip</AssemblyName>
     <RootNamespace>Crews.Utility.RotatoChip</RootNamespace>
+    <SignAssembly>false</SignAssembly>
+    <AssemblyOriginatorKeyFile>CrewsKey.pfx</AssemblyOriginatorKeyFile>
+    <ApplicationIcon>res\chip.ico</ApplicationIcon>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,8 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapplo.Windows.User32" Version="0.11.29" />
+    <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
     <PackageReference Include="MaterialDesignThemes" Version="4.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
