Iterated package version.

--- a/RotatoChip/RotatoChip.csproj
+++ b/RotatoChip/RotatoChip.csproj
@@ -9,6 +9,7 @@
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>CrewsKey.pfx</AssemblyOriginatorKeyFile>
     <ApplicationIcon>res\chip.ico</ApplicationIcon>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
